--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <html>
-  <title>VS</title>
+  <title>ICMTEM_2024</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -42,12 +42,12 @@
    <br><br>
     <div class="container" >
     <h1 style="text-shadow: 2px 2px 4px #000000;font-weight:900;">International conference on Modern Trends in Engineering and Management (ICMTEM-24)</h1><br>
-    <h2 style="color:rgb(252 181 20);font-weight:900;">DATE: 02 APRIL 2024</h2><br>
+    <h2 style="color:rgb(252 181 20);font-weight:900;">DATE: 02 APRIL 2024 | HYBRID MODE</h2><br>
     <h3 style="font-weight:900;">Organized By</h3><br>
-    <h3 style="text-shadow: 2px 2px 4px #000000;font-weight:900;">Department of Electrical and Electronics Engineering</h3><br>
-    <h1 style="text-shadow: 2px 2px 4px #000000;font-weight:900;">STELLA MARY'S COLLEGE OF ENGINEERING</h1><br>
+    <h2 style="text-shadow: 2px 2px 4px #000000;font-weight:900;">DEPARTMENT OF ELECTRICAL AND ELECTRONICS ENGINEERING</h2><br>
+    <h2 style="text-shadow: 2px 2px 4px #000000;font-weight:900;">STELLA MARY'S COLLEGE OF ENGINEERING</h2><br>
     <h3 style="font-weight:900;color:rgb(252 181 20);">In Association with</h3><br>
-    <h1 style="text-shadow: 2px 2px 4px #000000;font-weight:900;">AB TECHNOLOGIES</h1><br>
+    <h2 style="text-shadow: 2px 2px 4px #000000;font-weight:900;">AB TECHNOLOGIES</h2><br>
     <img src="static/images/ablg.png" width="240px">
   </div>
   <br>
@@ -137,8 +137,8 @@
     </div>
     <div class="col-md-4 " style="padding-left: 40px;padding-top: 30px">
 
-      <h2 class="text-primary">CONTACT US:</h2>
-      <p class="text-primary">Program Manager (AB TECHNOLOGIES)</p>
+      <p><b>CONTACT US:</b></p>
+      <p><b>Program Manager (AB TECHNOLOGIES)</b></p>
       <p>ICMTEM - 2024 | Kanyakumari, India</p>
       <p>Call: +91 9840511458</p>
       <p>WhatsApp: +91 9840511458</p>
