--- a/templates/registration.html
+++ b/templates/registration.html
@@ -24,12 +24,13 @@
         <br><br><br>
 
             <div class="container">
-                <h1>Conference Registration</h1>
-                <p style="text-align: justify;">For a paper to be included in the proceedings and scheduled for presentation, at least one of the authors must be a registered participant in the conference. Members who wish to participate may register for the fees listed below. Once the payment is completed send the screenshot of the receipt to icmtem2024@gmail.com</p>
+                <h1 class="text-center" style="font-weight:900;text-shadow: 2px 2px 4px #000000;text-transform:uppercase">Conference Registration</h1><br>
+                <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:50px">For a paper to be included in the proceedings and scheduled for presentation, at least one of the authors must be a registered participant in the conference. Members who wish to participate may register for the fees listed below. Once the payment is completed send the screenshot of the receipt to icmtem2024@gmail.com</p>
             </div>
 
 <br><br><br>
-            <div class="container"> 
+  <center>
+            <div class="w-50"> 
                 <table class="table table-bordered text-center">
                     <thead class="thead-dark">
                     <tr>
@@ -53,10 +54,13 @@
                 </tbody>
                 </table>
             </div>
+    </center>
 <br><br>
-            <div class="container">
-                <h1>BANK DETAILS</h1>
-                <table class="table table-bordered text-center">
+  <center>
+            <div class="w-50">
+                <h1 class="text-center" style="font-weight:900;text-shadow: 2px 2px 4px #000000;text-transform:uppercase">BANK DETAILS</h1>
+              <br>
+                <table class="table table-bordered ">
                     <tr>
                         <th>NAME</th>
                         <td>AB TECHNOLOGIES</td>
@@ -88,7 +92,7 @@
                 </table>
             </div>
 
-
+    </center>
 
 
 
@@ -100,7 +104,7 @@
 
 
 
-        <div class="jumbotron">
+        <div class="jumbotron" style="margin:0px">
             <br><br>
             <div class="container ">
             <div class="row">
@@ -110,8 +114,8 @@
           
               </div>
               <div class="col-md-4 " style="padding-left: 40px;padding-top:30px">
-                <p>CONTACT US:</p>
-                <p>Program Manager (AB TECHNOLOGIES)</p>
+                <p><b>CONTACT US:</b></p>
+                <p><b>Program Manager (AB TECHNOLOGIES)</b></p>
                 <p>ICMTEM - 2024 | Kanyakumari, India</p>
                 <p>Call: +91 9840511458</p>
                 <p>WhatsApp: +91 9840511458</p>
@@ -125,9 +129,9 @@
               </div>
             </div>
           </div>
-          <br><br>
+          
           </div>
-          <br><br>
+         
 
 </body>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
