--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
 <body>
   
   <div class="mt-3">
-  <marquee ><h5>Dates to Remember: Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
+  <marquee ><h5><span style="color:red">Dates to Remember:</span> Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
 </div>
 
   
@@ -48,7 +48,9 @@
     <h2 style="text-shadow: 2px 2px 4px #000000;font-weight:900;">STELLA MARY'S COLLEGE OF ENGINEERING</h2><br>
     <h3 style="font-weight:900;color:rgb(252 181 20);">In Association with</h3><br>
     <h2 style="text-shadow: 2px 2px 4px #000000;font-weight:900;">AB TECHNOLOGIES</h2><br>
-    <img src="static/images/ablg.png" width="240px">
+      <div style="display:flex;justify-content:space-around;">
+       <img src="static/images/STlogo.png" width="240px" style="object-fit:cover"><img src="static/images/ablg.png" width="280px" >
+      </div>
   </div>
   <br>
     <br>
