--- a/templates/index.html
+++ b/templates/index.html
@@ -48,8 +48,15 @@
     <h2 style="text-shadow: 2px 2px 4px #000000;font-weight:900;">STELLA MARY'S COLLEGE OF ENGINEERING</h2><br>
     <h3 style="font-weight:900;color:rgb(252 181 20);">In Association with</h3><br>
     <h2 style="text-shadow: 2px 2px 4px #000000;font-weight:900;">AB TECHNOLOGIES</h2><br>
-      <div style="display:flex;justify-content:space-around;">
-       <img src="static/images/STlogo.png" width="240px" style="object-fit:cover"><img src="static/images/ablg.png" width="280px" >
+      <div class="row">
+       <div class="col-md-6">
+        <img src="static/images/STlogo.png"  height="200px" >
+         </div>
+      
+          <div class="col-md-6">
+        <img src="static/images/ablg.png" height="200px"  >
+          </div>
+        
       </div>
   </div>
   <br>
