--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -58,8 +58,8 @@
           </a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="/callforpaper">Call For Paper</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/scientific">Scientific Program</a>
+          
+           
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/wca">Who Can Attend</a>
             <div class="dropdown-divider"></div>
@@ -141,12 +141,12 @@
         </li>
         &nbsp; -->
         
-        <!-- <li class="nav-item">
+        <li class="nav-item">
 
           <a class="nav-link text-white" href="/journals">Journals</a>
 
         </li>
-          &nbsp; -->
+          &nbsp;
         
           <!-- &nbsp;     &nbsp; -->
         <!-- <li class="nav-item dropdown">
