--- a/templates/papersub.html
+++ b/templates/papersub.html
@@ -19,10 +19,10 @@
         </div>
 <br><br><br>
 <div  class="jumbotron container" style="padding: 40px;">
-  <h1 class="text-center">PAPER SUBMISSION GUIDELINES</h1><hr class="bg-dark"><br>
+  <h1 class="text-center text-danger" style="font-weight:900;text-shadow: 2px 2px 4px #000000;"">PAPER SUBMISSION GUIDELINES</h1><hr class="bg-dark">
   
 <center>
-<p style="text-align:start;font-size:1.5vw;line-height:200%;padding-left:10px">&#9733;Papers should be 8 pages and follow the ICMTEM-24 conference paper template. <br>&#9733;The purpose of a conference template is to provide a consistent format for papers appearing in the conference proceedings. <br>&#9733; ICMTEM-24 strongly encourages use of the conference manuscript templates provided below.</p>
+<p style="text-align:start;font-size:1.5vw;line-height:200%;padding:25px">&#9733;Papers should be 8 pages and follow the ICMTEM-24 conference paper template. <br>&#9733;The purpose of a conference template is to provide a consistent format for papers appearing in the conference proceedings. <br>&#9733; ICMTEM-24 strongly encourages use of the conference manuscript templates provided below.</p>
 </center>
 </div>
 
