--- a/templates/presentationguide.html
+++ b/templates/presentationguide.html
@@ -50,8 +50,8 @@
         <div class="container bg-light p-5 shadow p-3 mb-5  rounded">
             <h1 class="text-center" style="font-weight:900;text-shadow: 2px 2px 4px #000000;">VIRTUAL PRESENTERS</h1><hr>
             <div style="line-height: 200%;font-size:18px">
-            <p style="text-align: justify;text-indent:100px">We provide virtual presentations for your convenience whether, for financial or other reasons, you are unavailable to attend the conference in person but still would like your paper to be presented and published.</p>
-            <p style="text-align: justify;text-indent:100px">Two varieties of virtual presentations are offered. (i) Live video presenter (ii) PowerPoint virtual presentation.</p>
+            <p style="text-align: justify;text-indent:100px">We provide virtual presentations for your convenience whether, for financial or other reasons, you are unavailable to attend the conference in person but still would like your paper to be presented and published.Two varieties of virtual presentations are offered. (i) Live video presenter (ii) PowerPoint virtual presentation.</p>
+           
           </div>
           </div>
 
