--- a/templates/ababtech.html
+++ b/templates/ababtech.html
@@ -6,6 +6,17 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
   <link rel="stylesheet" href="static/style.css">
+  <!-- <style>
+    .ab{
+      background-image:linear-gradient(rgba(0,0,0,0.60),rgba(0, 0, 0, 0.60)),url('static/images/home.jpg');
+      background-size: cover;
+      background-position: center;
+      width: 100%;
+      height: 30vh;
+      display:flex;
+      justify-content:center;
+      align-items:center} 
+    </style> -->
 </head>
 <body style="background-color: #e9ecef;">
     <div class="mt-3">
@@ -14,7 +25,7 @@
       
         
         {% include 'navbar.html' %}
-        <div class="bg-dark" style="height: 30vh;display:flex;justify-content:center;align-items:center" >
+        <div class="bg-dark ab" >
             <div><h1 style="color: azure;">ABOUT AB TECHNOLOGIES</h1></div>
         </div>
 <br><br><br>
