--- a/templates/callforpaper.html
+++ b/templates/callforpaper.html
@@ -20,7 +20,7 @@
 <br><br><br>
 
 <div class="container bg-light p-5 shadow p-3 mb-5  rounded">
-  <h1 class="text-center" style="color:rgb(29, 29, 204); font-weight:900;text-shadow: 2px 2px 4px #000000;">CALL FOR PAPER</h1><hr>
+  <h1 class="text-center text-danger" style="font-weight:900;text-shadow: 2px 2px 4px #000000;">CALL FOR PAPERS</h1><hr>
   <br>
   <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:100px">Authors and scholars from India and abroad are invited to submit original unpublished research articles relevant to the field of the ICMTEM 2024 conference. ICMTEM 2024 endeavor to publish high quality original research papers, review papers, case studies, and technical notes. All papers in the conference will have to undergo rigorous peer review process.</p>
 </div>
