--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -141,12 +141,12 @@
         </li>
         &nbsp; -->
         
-        <li class="nav-item">
+        <!-- <li class="nav-item">
 
           <a class="nav-link text-white" href="/journals">Journals</a>
 
         </li>
-          &nbsp;
+          &nbsp; -->
         
           <!-- &nbsp;     &nbsp; -->
         <!-- <li class="nav-item dropdown">
@@ -162,12 +162,15 @@
         </li>
         &nbsp; -->
 
-        <li class="nav-item">
+        
+        <!-- <li class="nav-item">
 
           <a class="nav-link text-white" href="/awards">Awards</a>
 
         </li>
-          &nbsp;
+          &nbsp; -->
+
+        
         <!-- <li class="nav-item">
 
           <a class="nav-link text-white" href="/">Venue</a>
