--- a/templates/papersub.html
+++ b/templates/papersub.html
@@ -26,21 +26,22 @@
 </center>
 </div>
 
+  <div class=" container" style="padding:40px">
 
+    <center>
+    <h4 >Click below to download the Template </h4><button class="btn btn-lg btn-primary"><a class="text-white" href="static/IJATEM PAPER TEMPLATE.docx ">DOWNLOAD NOW</a></button>
+  </center>
+  </div>
 
+  
 <div class="container  " style="padding:40px">
   <center>
-  <h2>Submission Mail Address</h2>
-  <h2 class="text-primary">icmtem2024@gmail.com</h2>
+  <h2>Submission FORM</h2>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdRzBP86MGJtzKRZ08957MgGpFzO5XMhtYQkmSU-BKabkqfTw/viewform?embedded=true" width="640" height="1591" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </center>
 </div>
 
-<div class=" container" style="padding:40px">
-  
-  <center>
-  <h4 >Click below to download the Template </h4><button class="btn btn-lg btn-primary"><a class="text-white" href="static/IJATEM PAPER TEMPLATE.docx ">DOWNLOAD NOW</a></button>
-</center>
-</div>
+
 
 <br><br><br><br>
 
@@ -48,7 +49,7 @@
 
 
 
-<div class="jumbotron">
+<div class="jumbotron" style="margin:0px">
   <br><br>
   <div class="container ">
   <div class="row">
@@ -58,10 +59,10 @@
 
     </div>
     <div class="col-md-4 " style="padding-left: 40px;padding-top:30px">
-      <p>CONTACT US:</p>
-      <p>Program Manager (AB TECHNOLOGIES)</p>
+      <p><b>CONTACT US:</b></p>
+      <p><b>PROGRAM CO-ORDINATOR <br>(AB TECHNOLOGIES) </b></p>
       <p>ICMTEM - 2024 | Kanyakumari, India</p>
-      <p>Call: +91 9840511458</p>
+      <p>Call: +91 9840511458 , +91 8807068644 , +91 9363401105</p>
       <p>WhatsApp: +91 9840511458</p>
       <p>Email: icmtem2024@gmail.com</p>
 
@@ -73,7 +74,7 @@
     </div>
   </div>
 </div>
-<br><br>
+
 </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
