--- a/templates/awards.html
+++ b/templates/awards.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="static/style.css">
 </head>
-<body>
+<body style="background-color: #e9ecef;">
 
     <div class="mt-3">
         <marquee ><h5>Dates to Remember: Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
@@ -20,78 +20,70 @@
             <div><h1 style="color: azure;">AWARDS</h1></div>
             
         </div>
-        
-        <br><br><br>
+  <br><br><br>
 
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-            <h2 class="text-primary">Presentation Awards</h2><hr>
-            <p style="text-align: justify;"> •	The purpose of presentation awards is to recognise an individual's contribution to the field and to promote more active participation for the benefit of the industry as a whole.</p>
-        <p style="text-align: justify;">•	The idea will encourage you to work more, which will help the sector and possibly result in the adoption of legislation that will foster a prosperous future.</p>
-        <p style="text-align: justify;">•	Based on the evaluation committee's and the conference chair's scores, the presentations with the highest scores will be suggested for the following awards.</p>
-    </div>
-    <div class="col-md-6"> 
-        <h2 class="text-primary">Presentation Awards</h2><hr>
-        <p style="text-align: justify;">•	When it comes to awards, both oral and poster presentations will be considered. Best Presentation Award given for a presentation that stands out among the other presentations, taking into consideration all conference presenters who are highly professional, inspiring, and impactful in their delivery of their material. </p>
-        <p style="text-align: justify;">•	The Conference Chair selects the winning presentation based on the evaluation committee's scores for each presentation as well as his or her own perusal of the papers.</p>
-        </div>
-    </div>
-    </div>
-        <br><br>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-            <h2 class="text-primary">Session’s Best Award</h2><hr>
-            <p style="text-align: justify;">•	The session chair selects which presentation will win the Session's Best Presentation Award based on the ratings provided by the evaluation committee, which consists of the session chair and two members of the evaluation panel for each presentation of each session.</p>
-            <p style="text-align: justify;">•	The Best Student Presentation award will be granted for an outstanding conference presentation in order to recognise the excellent work done by student participants. The recipient of the award must be enrolled as a student in order to be eligible for the award.</p>
-        </div>
-        <div class="col-md-6">
-            <h2 class="text-primary">Session’s Best Award</h2><hr>
-            <p style="text-align: justify;">•	The prize is given out in accordance with a strict criteria of quality, and all student presenters will be given consideration for it.</p>
-            <p style="text-align: justify;">•	The conference chair selects which presentation will win the Best Research Paper Award according to the assessment committee's grades for each student presenter's presentation and his or her personal review of the papers.</p>
-        </div>
-        </div>
-        </div>
+  <div class="container bg-light p-5 shadow p-3 mb-5  rounded" >
+      <h1 class="text-center text-danger" style="font-weight:900;text-transform:uppercase">Presentation Awards</h1>
+    <div style="padding:40px">
+      <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:50px">&#9733;The purpose of presentation awards is to recognise an individual's contribution to the field and to promote more active participation for the benefit of the industry as a whole.</p>
+    <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:50px">&#9733;The idea will encourage you to work more, which will help the sector and possibly result in the adoption of legislation that will foster a prosperous future.</p>
+
+     <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:50px">&#9733;Based on the evaluation committee's and the conference chair's scores, the presentations with the highest scores will be suggested for the following awards.</p>
+     <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:50px">&#9733;When it comes to awards, both oral and poster presentations will be considered. Best Presentation Award given for a presentation that stands out among the other presentations, taking into consideration all conference presenters who are highly professional, inspiring, and impactful in their delivery of their material. </p>
+     <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:50px">&#9733;The Conference Chair selects the winning presentation based on the evaluation committee's scores for each presentation as well as his or her own perusal of the papers.</p>
 
 
+    </div> 
+  </div>
 
+  <br><br><br>
 
+  <div class="container bg-light p-5 shadow p-3 mb-5  rounded">
+      <h1 class="text-center text-danger" style="font-weight:900;text-transform:uppercase">Session’s Best Award</h1>
+    <div style="padding:40px">
+      <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:50px">&#9733;The session chair selects which presentation will win the Session's Best Presentation Award based on the ratings provided by the evaluation committee, which consists of the session chair and two members of the evaluation panel for each presentation of each session.</p>
+    <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:50px">&#9733;The Best Student Presentation award will be granted for an outstanding conference presentation in order to recognise the excellent work done by student participants. The recipient of the award must be enrolled as a student in order to be eligible for the award.</p>
+
+     <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:50px">&#9733;The prize is given out in accordance with a strict criteria of quality, and all student presenters will be given consideration for it.</p>
+     <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:50px">&#9733;The conference chair selects which presentation will win the Best Research Paper Award according to the assessment committee's grades for each student presenter's presentation and his or her personal review of the papers.</p>
+     
+  </div>
+
+  </div>
 
 
         <br><br><br><br>
 
 
 
+  <div class="jumbotron" style="margin:0px">
+    <br><br>
+    <div class="container ">
+    <div class="row">
+      <div class="col-md-4 " style="padding-top:30px">
+        <img src="static/ablg.png" width="140px"><br><br>
+        <p style="text-align: justify;">ICMTEM-2024 The International Conference on Modern Trends in Engineering and Management (ICMTEM 2024) will be held on 02th April 2024 at Stella Mary’s College of Engineering, Kanyakumari, India.</p>
 
-        <div class="jumbotron">
-          <br><br>
-          <div class="container ">
-          <div class="row">
-            <div class="col-md-4 " style="padding-top:30px">
-              <img src="static/ablg.png" width="140px"><br><br>
-              <p style="text-align: justify;">ICMTEM-2024 The International Conference on Modern Trends in Engineering and Management (ICMTEM 2024) will be held on 02th April 2024 at Stella Mary’s College of Engineering, Kanyakumari, India.</p>
+      </div>
+      <div class="col-md-4 " style="padding-left: 40px;padding-top:30px">
+        <p><b>CONTACT US:</b></p>
+        <p><b>PROGRAM CO-ORDINATOR <br>(AB TECHNOLOGIES) </b></p>
+        <p>ICMTEM - 2024 | Kanyakumari, India</p>
+        <p>Call: +91 9840511458 , +91 8807068644 , +91 9363401105</p>
+        <p>WhatsApp: +91 9840511458</p>
+        <p>Email: icmtem2024@gmail.com</p>
+
+      </div>
+      <div class="col-md-4 bg-light" style="padding:10px;">
+        <h5>Venue</h5>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3949.683783072304!2d77.33839087021896!3d8.133639684476929!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b04fae7b453d579%3A0xf4356d0b26d3dd2a!2sStella%20Mary&#39;s%20College%20Of%20Engineering!5e0!3m2!1sen!2sin!4v1709724089173!5m2!1sen!2sin" width="100%" height="250px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+      </div>
+    </div>
+  </div>
+
+  </div>
         
-            </div>
-            <div class="col-md-4 " style="padding-left: 40px;padding-top:30px">
-              <p>CONTACT US:</p>
-              <p>Program Manager (AB TECHNOLOGIES)</p>
-              <p>ICMTEM - 2024 | Kanyakumari, India</p>
-              <p>Call: +91 9840511458</p>
-              <p>WhatsApp: +91 9840511458</p>
-              <p>Email: icmtem2024@gmail.com</p>
-        
-            </div>
-            <div class="col-md-4 bg-light" style="padding:10px;">
-              <h5>Venue</h5>
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3949.683783072304!2d77.33839087021896!3d8.133639684476929!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b04fae7b453d579%3A0xf4356d0b26d3dd2a!2sStella%20Mary&#39;s%20College%20Of%20Engineering!5e0!3m2!1sen!2sin!4v1709724089173!5m2!1sen!2sin" width="100%" height="250px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        
-            </div>
-          </div>
-        </div>
-        <br><br>
-        </div>
-        <br><br>
 
 
     
