--- a/templates/callforpaper.html
+++ b/templates/callforpaper.html
@@ -45,34 +45,34 @@
 
 
 
-<div class="jumbotron" style="margin:0px">
-  <br><br>
-  <div class="container ">
-  <div class="row">
-    <div class="col-md-4 " style="padding-top:30px">
-      <img src="static/images/ablg.png" width="140px"><br><br>
-      <p style="text-align: justify;">ICMTEM-2024 The International Conference on Modern Trends in Engineering and Management (ICMTEM 2024) will be held on 02th April 2024 at Stella Mary’s College of Engineering, Kanyakumari, India.</p>
 
-    </div>
-    <div class="col-md-4 " style="padding-left: 40px;padding-top: 30px">
+  <div class="jumbotron" style="margin:0px">
+    <br><br>
+    <div class="container ">
+    <div class="row">
+      <div class="col-md-4 " style="padding-top:30px">
+        <img src="static/ablg.png" width="140px"><br><br>
+        <p style="text-align: justify;">ICMTEM-2024 The International Conference on Modern Trends in Engineering and Management (ICMTEM 2024) will be held on 02th April 2024 at Stella Mary’s College of Engineering, Kanyakumari, India.</p>
 
-      <h2 class="text-primary">CONTACT US:</h2>
-      <p class="text-primary">Program Manager (AB TECHNOLOGIES)</p>
-      <p>ICMTEM - 2024 | Kanyakumari, India</p>
-      <p>Call: +91 9840511458</p>
-      <p>WhatsApp: +91 9840511458</p>
-      <p>Email: icmtem2024@gmail.com</p>
+      </div>
+      <div class="col-md-4 " style="padding-left: 40px;padding-top:30px">
+        <p><b>CONTACT US:</b></p>
+        <p><b>PROGRAM CO-ORDINATOR <br>(AB TECHNOLOGIES) </b></p>
+        <p>ICMTEM - 2024 | Kanyakumari, India</p>
+        <p>Call: +91 9840511458 , +91 8807068644 , +91 9363401105</p>
+        <p>WhatsApp: +91 9840511458</p>
+        <p>Email: icmtem2024@gmail.com</p>
 
-    </div>
-    <div class="col-md-4 bg-light" style="padding:10px;">
-      <p><b>VENUE</b></p>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3949.683783072304!2d77.33839087021896!3d8.133639684476929!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b04fae7b453d579%3A0xf4356d0b26d3dd2a!2sStella%20Mary&#39;s%20College%20Of%20Engineering!5e0!3m2!1sen!2sin!4v1709724089173!5m2!1sen!2sin" width="100%" height="250px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+      <div class="col-md-4 bg-light" style="padding:10px;">
+        <h5>Venue</h5>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3949.683783072304!2d77.33839087021896!3d8.133639684476929!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b04fae7b453d579%3A0xf4356d0b26d3dd2a!2sStella%20Mary&#39;s%20College%20Of%20Engineering!5e0!3m2!1sen!2sin!4v1709724089173!5m2!1sen!2sin" width="100%" height="250px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
+      </div>
     </div>
   </div>
-</div>
 
-</div>
+  </div>
 
 </body>
 
