--- a/templates/journals.html
+++ b/templates/journals.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="static/style.css">
 </head>
-<body>
+<body style="background-color: #e9ecef;">
     <div class="mt-3">
         <marquee ><h5>Dates to Remember: Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
       </div>
@@ -22,50 +22,77 @@
         
         <br><br><br>
 
-        <div class="container">
-            <h2>Proceedings & Publications</h2>
-            <p style="text-align: justify;">International Conference on Modern Trends in Engineering and Management (ICMTEM-24) proceedings series will be submitted to the journal of International Journal of Advanced Trends in Engineering and Management (IJATEM) and International Journal for Modern Trends in Science and Technology (IJMTST) for evaluation and indexing.</p>
-            <h2>Publication opportunities</h2>
-            <p style="text-align: justify;">Submissions of papers to be reviewed by the “International Conference on Modern Trends in Engineering and Management (ICMTEM-24)” review committee will be suggested for publication in one of the following journals:</p>
-            <h2>Publications in Journals</h2>
-            <br><br><br><br><br><br><br><br><br><br><br>
+        <div class="container bg-light p-5 shadow p-3 mb-5  rounded ">
+            <h2 style="font-weight:900;text-transform:uppercase" class="text-danger text-center">Proceedings & Publications</h2>
+            <p style="text-align: justify;font-size:18px;text-indent:50px;padding:20px;line-height: 200%">International Conference on Modern Trends in Engineering and Management (ICMTEM-24) proceedings series will be submitted to the journal of International Journal of Advanced Trends in Engineering and Management (IJATEM) and International Journal for Modern Trends in Science and Technology (IJMTST) for evaluation and indexing.</p>
+            <h2 style="font-weight:900;text-transform:uppercase" class="text-danger text-center">Publication opportunities</h2>
+            <p style="text-align: justify;font-size:18px;text-indent:50px;padding:20px;line-height: 200%">Submissions of papers to be reviewed by the “International Conference on Modern Trends in Engineering and Management (ICMTEM-24)” review committee will be suggested for publication in one of the following journals:</p>
+            
+            
 
         </div>
 
-        <div class="container">
-            <h2>The following are the main processes in publishing a research paper, from manuscript preparation to publication:</h2>
-        <p style="text-align: justify;">Perform Research: Have original research work of current interest. High-quality research should be the primary focus of scholars in order to promote area advancement. Finding the current issues facing the field will be made easier with the aid of a thorough literature review.</p>
+        <div class="container bg-light p-5 shadow p-3 mb-5  rounded">
+          <h2 style="font-weight:900;text-transform:uppercase" class="text-danger text-center">Publications in Journals</h2>
+          <br><br>
+          <div >
+            <center>
+              <img src="static/images/ijlogo.jpeg" width="200px" alt=""><br><br> <br> 
+              <p style="font-size:20px">International Journal of Advanced Trends in Engineering and Management</p><br>
+              <p style="font-size:18px">ISSN: 2583-7052</p>
+<br><br><br>
+              <img src="static/images/ijmtst.png" width="200px" alt=""><br><br><br>
+              <p style="font-size:20px">The International Journal for Modern Trends in Science and Technology (IJMTST)</p><br>
+              <p style="font-size:18px">ISSN: 2455-3778</p>
+            </center>
+            </div>
+
+          </div>
+          
+         
+            
+
+
+
+        <div class="container bg-light p-5 shadow p-3 mb-5  rounded" style="padding: 40px; font-size:18px;line-height:200%;">
+            <h2 style="font-weight: 900;">The following are the main processes in publishing a research paper, from manuscript preparation to publication:</h2><br>
+        <p style="text-align: justify; line-height:200%;"><span class="text-danger" style="font-weight: 900;">Perform Research:</span> Have original research work of current interest. High-quality research should be the primary focus of scholars in order to promote area advancement. Finding the current issues facing the field will be made easier with the aid of a thorough literature review.</p>
         <br>
-        <p style="text-align: justify;">Prepare Manuscript: Find a journal that matches the same objectives and scope as your research. At that point, the author needs to learn about all journal policies and details, including those pertaining to copyright, authorship, submission guidelines, and publication fees.<br>Once an appropriate journal has been identified, format the paper in accordance with the journal's author guidelines. As you are writing up your findings, apply a suitable research approach, base your work on reliable data, and develop original hypotheses. Share your work's theoretical and practical implications and offer your theoretical insight.</p>
-        <p style="text-align: justify;">Peer-review: The peer-reviewing procedure will begin for a properly structured paper that is within the parameters of the publication following the editorial screening.  It could take a few weeks for the editor to reply, so be patient while the review process is underway. The period of time needed for reviewing differs depending on the journal; to find out the estimated duration of time required go to the about section of each journal.</p>
-    <p style="text-align: justify;">•	Decision: The editor will send you one of the following decision letters in accordance with the reviewer's suggestion.</p>
-    <p style="text-align: justify;">•	Revision Required: Make necessary changes to the manuscript and submit it again.</p>
-    <p style="text-align: justify;">•	Decline: Examine your manuscript and reject the justification. Give your text a thorough edit and then submit it again as a new manuscript.</p>
-<p style="text-align: justify;">•	Accepted: Now to celebrate: the journal will copyedit your paper before it is published.</p>
-<p style="text-align: justify;">Publication: Your article will be published a few days after the manuscript is accepted, and you will receive a galley proof copy for minor proofreading changes. It's time to distribute your published work and provide citations in other relevant papers in accordance with the journal's license policy.</p>
+        <p style="text-align: justify;line-height:200%;"><span class="text-danger" style="font-weight: 900;">Prepare Manuscript: </span> Find a journal that matches the same objectives and scope as your research. At that point, the author needs to learn about all journal policies and details, including those pertaining to copyright, authorship, submission guidelines, and publication fees.<br>Once an appropriate journal has been identified, format the paper in accordance with the journal's author guidelines. As you are writing up your findings, apply a suitable research approach, base your work on reliable data, and develop original hypotheses. Share your work's theoretical and practical implications and offer your theoretical insight.</p>
+        <br><p style="text-align: justify;line-height:200%;"><span class="text-danger" style="font-weight: 900;">Peer-review: </span>The peer-reviewing procedure will begin for a properly structured paper that is within the parameters of the publication following the editorial screening.  It could take a few weeks for the editor to reply, so be patient while the review process is underway. The period of time needed for reviewing differs depending on the journal; to find out the estimated duration of time required go to the about section of each journal.</p>
+    
+    <div style="padding:40px;">
+        <p style="text-align: justify;">&#9733;	Decision: The editor will send you one of the following decision letters in accordance with the reviewer's suggestion.</p>
+    <p style="text-align: justify;">&#9733;	Revision Required: Make necessary changes to the manuscript and submit it again.</p>
+    <p style="text-align: justify;">&#9733;	Decline: Examine your manuscript and reject the justification. Give your text a thorough edit and then submit it again as a new manuscript.</p>
+<p style="text-align: justify;">&#9733;	Accepted: Now to celebrate: the journal will copyedit your paper before it is published.</p>
+</div>
+<p style="text-align: justify;"><span class="text-danger" style="font-weight: 900;">Publication:</span> Your article will be published a few days after the manuscript is accepted, and you will receive a galley proof copy for minor proofreading changes. It's time to distribute your published work and provide citations in other relevant papers in accordance with the journal's license policy.</p>
 
 </div>
 <br><br>
 
-<div class="container">
-    <h2>Publication malpractice and ethics</h2>
-    <h3>Authors' duties</h3>
-    <h3>Reporting standards</h3>
-    <p style="text-align: justify;">Original research report authors should to include a factual description of the work done together with an objective assessment of its importance. The paper should accurately present the underlying data. A paper should have enough information and citations so that other people may do the same research. It is unethical and unprofessional to make false or intentionally erroneous statements.</p>
-<h3>Data access and retention</h3>
-<p style="text-align: justify;">For editorial review, authors may be required to submit the study's raw data along with their manuscript. If possible, they should be ready to make the data publicly available. In any case, authors should make sure that the data are available to other qualified professionals for a minimum of ten years following publication (ideally through an institutional or subject-based data repository or other data center), as long as participant confidentiality can be maintained and release of the data is not prohibited by law pertaining to proprietary data.</p>
-<h3>Originality, plagiarism, and acknowledgment of sources</h3>
-<p style="text-align: justify;">Authors will only submit fully original works, properly citing or paraphrasing other people's words and/or works. Citations should also be made for publications that have influenced the description of the work that has been described.</p>
-<h3>Multiple, redundant or concurrent publication</h3>
-<p style="text-align: justify;">In general, articles that essentially describe the same research should not appear in many journals. It is unacceptable to submit the same paper to many journals as this is considered unethical publishing practice.</p>
+<div class="container bg-light p-5 shadow p-3 mb-5  rounded" >
+    <h2 style="font-weight: 900;text-transform:uppercase" class="text-danger text-center">Publication malpractice and ethics</h2><br><br>
+    <h3 style="font-weight: 900;">Authors' duties</h3><br>
+    <h3 style="font-weight: 900;" class="text-danger">Reporting standards</h3><br>
+    <p style="text-align: justify;font-size: 18px;text-indent:50px;line-height:200%;">Original research report authors should to include a factual description of the work done together with an objective assessment of its importance. The paper should accurately present the underlying data. A paper should have enough information and citations so that other people may do the same research. It is unethical and unprofessional to make false or intentionally erroneous statements.</p>
+<br>
+    <h3 style="font-weight: 900;" class="text-danger">Data access and retention</h3><br>
+<p style="text-align: justify;font-size: 18px;text-indent:50px;line-height:200%;">For editorial review, authors may be required to submit the study's raw data along with their manuscript. If possible, they should be ready to make the data publicly available. In any case, authors should make sure that the data are available to other qualified professionals for a minimum of ten years following publication (ideally through an institutional or subject-based data repository or other data center), as long as participant confidentiality can be maintained and release of the data is not prohibited by law pertaining to proprietary data.</p>
+<br>
+<h3 style="font-weight: 900;" class="text-danger">Originality, plagiarism, and acknowledgment of sources</h3><br>
+<p style="text-align: justify;font-size: 18px;text-indent:50px;line-height:200%;">Authors will only submit fully original works, properly citing or paraphrasing other people's words and/or works. Citations should also be made for publications that have influenced the description of the work that has been described.</p>
+<br>
+<h3 style="font-weight: 900;" class="text-danger">Multiple, redundant or concurrent publication</h3><br>
+<p style="text-align: justify;font-size: 18px;text-indent:50px;line-height:200%;">In general, articles that essentially describe the same research should not appear in many journals. It is unacceptable to submit the same paper to many journals as this is considered unethical publishing practice.</p>
 </div>
 
 <br><br><br><br>
 
 
 
-
-<div class="jumbotron">
+<div class="jumbotron" style="margin:0px">
   <br><br>
   <div class="container ">
   <div class="row">
@@ -75,10 +102,10 @@
 
     </div>
     <div class="col-md-4 " style="padding-left: 40px;padding-top:30px">
-      <p>CONTACT US:</p>
-      <p>Program Manager (AB TECHNOLOGIES)</p>
+      <p><b>CONTACT US:</b></p>
+      <p><b>PROGRAM CO-ORDINATOR <br>(AB TECHNOLOGIES) </b></p>
       <p>ICMTEM - 2024 | Kanyakumari, India</p>
-      <p>Call: +91 9840511458</p>
+      <p>Call: +91 9840511458 , +91 8807068644 , +91 9363401105</p>
       <p>WhatsApp: +91 9840511458</p>
       <p>Email: icmtem2024@gmail.com</p>
 
@@ -90,9 +117,8 @@
     </div>
   </div>
 </div>
-<br><br>
+
 </div>
-<br><br>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
