--- a/templates/ababtech.html
+++ b/templates/ababtech.html
@@ -22,17 +22,21 @@
     <div class="mt-3">
         <marquee ><h5>Dates to Remember: Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
       </div>
+
+  {% include 'navbar.html' %}
+  
+  <div class="bg-dark" style="height: 30vh;display:flex;justify-content:center;align-items:center" >
+      <div><h1 style="color: azure;">ABOUT AB TECHNOLOGIES</h1></div>
+  </div>
       
         
-        {% include 'navbar.html' %}
-        <div class="bg-dark ab" >
-            <div><h1 style="color: azure;">ABOUT AB TECHNOLOGIES</h1></div>
-        </div>
+        
+        
 <br><br><br>
         
 
         <div class="container bg-light p-5 shadow p-3 mb-5  rounded">
-          <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;">ABOUT AB TECHNOLOGIES</h1><hr>
+          <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;" class="text-center">ABOUT </h1><hr>
           <br>
           <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:100px">AB Technologies is the best research centre that has been in business dealing with real time and IEEE projects for engineering students of all the departments. We are also engaged in developing Electrical and Electronic Products like Solar based Grid tied and Standalone inverters, Home UPS Inverter, Laboratory Equipment’s for Engineering Colleges. AB Technologies is specialist in Conducting Training and Courses on Embedded systems, Matlab, PCB and CAD design, Computer software, hardware and networking for various Disciplines of Engineering and Arts Students.</p>
         </div>
