--- a/templates/abicmtem.html
+++ b/templates/abicmtem.html
@@ -21,7 +21,7 @@
         
         <br><br><br>
 <div class="container bg-light p-5 shadow p-3 mb-5  rounded">
-  <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;">ABOUT ICMTEM 2024</h1><hr>
+  <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;" class="text-center">ABOUT </h1><hr>
   <br>
   <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:100px">Recent developments in the fields of science, technology and engineering have contributed to an explosion of innovation in a wide variety of industries, including new product development and manufacturing, design and optimisation techniques, renewable energy, embedded technologies, smart grids,  robotics, structures and construction, big data, remote sensing and geographic information systems. The prestigious "ICMTEM 2024" conference seeks to provide a superior international platform for academics, researchers, engineers, industry participants, and students from all over the world to exchange experiences and research findings.  Energy-effective green technologies are being investigated to provide cost-effective solutions and better outputs across multiple sectors. The purpose of this conference is to explore new technologies and advances in science and engineering for superior engineering solutions by bringing together academics, researchers, and specialists from connected industries in a shared platform. Researchers will use this conference as a forum to showcase the results and discoveries of their work. Participants in this conference are invited from all over the world, including practicing engineers, academicians from various universities and engineering institutes, scientists from R&D institutions, research scholars, and postgraduate students.</p>
 </div>
