--- a/templates/abstella.html
+++ b/templates/abstella.html
@@ -26,7 +26,7 @@
         <div class="container bg-light p-5 shadow p-3 mb-5  rounded">
           <div class="row">
             <div class="col-md-8" style="line-height: 200%;">
-              <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;">ABOUT COLLEGE</h1><hr>
+              <h1 class="text-center" style="font-weight:900;text-shadow: 2px 2px 4px #000000;">ABOUT </h1><hr>
               <br>
               <p style="text-align: justify;font-size:18px;line-height: 200%;text-indent:50px">Stella Mary's College of Engineering is founded and overseen by the Nova Educational Trust, under the leadership of Dr. Nazareth Charles, a respected business entrepreneur in Kanyakumari District. Dr. Charles, an Engineer by profession, is renowned for his philanthropic efforts aimed at uplifting the less fortunate, particularly women and the underprivileged members of society. Dedicated to creating skilled professionals with integrity, the institution strives to contribute to the nation and industry.</p>
                 <p style="text-align: justify;font-size:18px;line-height: 200%;text-indent:50px">
