--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -69,28 +69,31 @@
         &nbsp;
          <!-- &nbsp; &nbsp; &nbsp;&nbsp;  -->
 
-         <li class="nav-item">
+         <!-- <li class="nav-item">
 
           <a class="nav-link text-white" href="/committee">Committee  </a>
 
         </li>
-      &nbsp;
+      &nbsp; -->
 
     
 
-        <!-- <li class="nav-item dropdown">
+        <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
             Committe
           </a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="/orgcommittee">ORGANIZING COMMITTEE</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="/intcommittee">INTERNATIONAL ADVISORY COMMITTEE</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="/nacommittee">NATIONAL ADVISORY COMMITTEE</a>
+            <div class="dropdown-divider"></div> 
+            <a class="dropdown-item" href="/sccommittee">SCIENTIFIC COMMITTEE</a>
           </div>
         </li>
 
-        &nbsp; -->
+        &nbsp;
       <!-- &nbsp;     &nbsp; &nbsp; &nbsp;      -->
 
         <!-- <li class="nav-item">
