--- a/templates/registration.html
+++ b/templates/registration.html
@@ -24,7 +24,7 @@
         <br><br><br>
 
             <div class="container">
-                <h1 class="text-center" style="font-weight:900;text-shadow: 2px 2px 4px #000000;text-transform:uppercase">Conference Registration</h1><br>
+                <h1 class="text-center text-danger" style="font-weight:900;text-shadow: 2px 2px 4px #000000;text-transform:uppercase">Conference Registration</h1><br>
                 <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:50px">For a paper to be included in the proceedings and scheduled for presentation, at least one of the authors must be a registered participant in the conference. Members who wish to participate may register for the fees listed below. Once the payment is completed send the screenshot of the receipt to icmtem2024@gmail.com</p>
             </div>
 
@@ -58,7 +58,7 @@
 <br><br>
   <center>
             <div class="w-50">
-                <h1 class="text-center" style="font-weight:900;text-shadow: 2px 2px 4px #000000;text-transform:uppercase">BANK DETAILS</h1>
+                <h1 class="text-center text-danger" style="font-weight:900;text-shadow: 2px 2px 4px #000000;text-transform:uppercase">BANK DETAILS</h1>
               <br>
                 <table class="table table-bordered ">
                     <tr>
