--- a/templates/orgcommittee.html
+++ b/templates/orgcommittee.html
@@ -24,13 +24,13 @@
 
         <div class="container jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
             <div>
-            <h1 class="text-center" style="color:darkblue;font-weight:900">CONVENER</h1><hr>
+            <h1 class="text-center text-danger" style="font-weight:900">CONVENER</h1><hr>
         </div>
         <center>
-        <div class=" text-white" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
+        <div class=" text-white" style="width:70%;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
 ,#0083b0);">
             <h1 style="font-size:2vw;font-weight:900">Dr. A. R. Gayathri</h1><hr class="bg-light">
-            <h3 style="font-size:1.5vw">Associate Professor&Head</h3>
+            <h3 style="font-size:1.5vw">Associate Professor & Head</h3>
             <h3 style="font-size:1.5vw">Department of Electrical and Electronics Engineering </h3>
             <h3 style="font-size:1.5vw">Stella Mary's College of Engineering</h3>
         </div>
@@ -38,7 +38,7 @@
         </div>
 <br><br><br>
 <div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
-    <h1 class="text-center" style="color:darkblue;font-weight:900">CO- CONVENERS</h1><hr>
+    <h1 class="text-center text-danger" style="font-weight:900">CO- CONVENERS</h1><hr>
         <div style="display: flex;flex-wrap:wrap;justify-content:space-around;">
             <div class="bg-info  mt-5 text-white" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
                 <h1 style="font-size:2vw;font-weight:900">Dr. R. K. Madhumathi</h1><hr class="bg-light">
@@ -76,7 +76,7 @@
 
     <br><br><br>
 <div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
-    <h1 class="text-center" style="color:darkblue;font-weight:900">CO-ORDINATORS</h1><hr>
+    <h1 class="text-center text-danger" style="font-weight:900">CO-ORDINATORS</h1><hr>
         <div style="display: flex;flex-wrap:wrap;justify-content:space-around;" class="text-white">
             <div class="bg-info  mt-5" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
                 <h1 style="font-size:2vw;font-weight:900">Dr. K. Ezhil Vignesh</h1><hr class="bg-light">
