--- a/templates/index.html
+++ b/templates/index.html
@@ -133,6 +133,19 @@
 <br><br><br><br>
 
 
+          <div class="container">
+            <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;" >ABOUT AB TECHNOLOGIES (IEEE EXPERT CENTRE)</h1><hr>
+            <br>
+            <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:100px">AB Technologies (AB Tech) deals with range of services for PhD Research works including Conference, UGC, Scopus and SCI/SCIE, UG/PG Journal works, Thesis & Synopsis Writing and PhD publication. The novel concepts, proposal consultation, statistics, editing and guidance in all stages are provided by professionals who are expertise in PhD related work. As a part of the Research & Training division of AB Technologies, AB Tech support Ph.D. Research Scholars/PG/UG Students in their Research areas/ Projects/Publications in all major domains.
+            </p>            
+               <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:100px">Special training and courses on embedded systems, Matlab, PCB and CAD design, Computer software, hardware and networking are conducted for various Disciplines of Engineering and Arts Students. AB Tech also aids to publish papers in International Journals and International Conferences according to the University Standard/Norms. AB Tech assists in providing International Journal/ International Conference publication for all Engineering Departments. Our major domains are Cloud computing/ Networking / Wireless communications/ Mobile Computing/Network Security/ Secure & Dependable Computing/ Data Mining/ Knowledge and Data Engg. / Image Processing /Parallel & Distributed systems/ Information Security/ Power Systems/ Mechanical/ Civil Engineering etc.</p>
+                  <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:100px">In addition, AB Tech conducts various Workshops, Trainings, Guest Lecture programs, National and International Conferences in many Engineering Colleges across the country. AB Tech also engages in developing Electrical and Electronic Products like Solar based Grid tied and Standalone inverter, Home UPS Inverter, Laboratory Equipments for Engineering Colleges.</p>
+          </div>
+
+  <br><br>
+
+
+
 
   <div class="jumbotron" style="margin:0px">
     <br><br>
@@ -140,7 +153,7 @@
     <div class="row">
       <div class="col-md-4 " style="padding-top:30px">
         <img src="static/ablg.png" width="140px"><br><br>
-        <p style="text-align: justify;">ICMTEM-2024 The International Conference on Modern Trends in Engineering and Management (ICMTEM 2024) will be held on 02th April 2024 at Stella Mary’s College of Engineering, Kanyakumari, India.</p>
+        <p style="text-align: justify;line-height:200%">ICMTEM-2024 The International Conference on Modern Trends in Engineering and Management (ICMTEM 2024) will be held on 02th April 2024 at Stella Mary’s College of Engineering, Kanyakumari, India.</p>
 
       </div>
       <div class="col-md-4 " style="padding-left: 40px;padding-top:30px">
@@ -149,7 +162,7 @@
         <p>ICMTEM - 2024 | Kanyakumari, India</p>
         <p>Call: +91 9840511458 , +91 8807068644 , +91 9363401105</p>
         <p>WhatsApp: +91 9840511458</p>
-        <p>Email: icmtem2024@gmail.com</p>
+        <p>Email: programs.abtech@gmail.com</p>
 
       </div>
       <div class="col-md-4 bg-light" style="padding:10px;">
