--- a/templates/ababtech.html
+++ b/templates/ababtech.html
@@ -20,12 +20,12 @@
 </head>
 <body style="background-color: #e9ecef;">
     <div class="mt-3">
-        <marquee ><h5>Dates to Remember: Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
+        <marquee ><h5><span style="color:red">Dates to Remember:</span> Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
       </div>
 
   {% include 'navbar.html' %}
   
-  <div class="bg-dark" style="height: 30vh;display:flex;justify-content:center;align-items:center" >
+  <div class="bg-dark" style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;" >
       <div><h1 style="color: azure;">ABOUT AB TECHNOLOGIES</h1></div>
   </div>
       
@@ -36,9 +36,9 @@
         
 
         <div class="container bg-light p-5 shadow p-3 mb-5  rounded">
-          <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;" class="text-center">ABOUT </h1><hr>
+          <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;" class="text-center">ABOUT AB TECHNOLOGIES (IEEE EXPERT CENTRE)</h1><hr>
           <br>
-          <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:100px">AB Technologies is the best research centre that has been in business dealing with real time and IEEE projects for engineering students of all the departments. We are also engaged in developing Electrical and Electronic Products like Solar based Grid tied and Standalone inverters, Home UPS Inverter, Laboratory Equipment’s for Engineering Colleges. AB Technologies is specialist in Conducting Training and Courses on Embedded systems, Matlab, PCB and CAD design, Computer software, hardware and networking for various Disciplines of Engineering and Arts Students.</p>
+          <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:100px">AB Technologies (AB Tech) deals with range of services for PhD Research works including Conference, UGC, Scopus and SCI/SCIE, UG/PG Journal works, Thesis & Synopsis Writing and PhD publication. The novel concepts, proposal consultation, statistics, editing and guidance in all stages are provided by professionals who are expertise in PhD related work. As a part of the Research & Training division of AB Technologies, AB Tech support Ph.D. Research Scholars/PG/UG Students in their Research areas/ Projects/Publications in all major domains. Special training and courses on embedded systems, Matlab, PCB and CAD design, Computer software, hardware and networking are conducted for various Disciplines of Engineering and Arts Students. AB Tech also aids to publish papers in International Journals and International Conferences according to the University Standard/Norms. AB Tech assists in providing International Journal/ International Conference publication for all Engineering Departments. Our major domains are Cloud computing/ Networking / Wireless communications/ Mobile Computing/Network Security/ Secure & Dependable Computing/ Data Mining/ Knowledge and Data Engg. / Image Processing /Parallel & Distributed systems/ Information Security/ Power Systems/ Mechanical/ Civil Engineering etc. In addition, AB Tech conducts various Workshops, Trainings, Guest Lecture programs, National and International Conferences in many Engineering Colleges across the country. AB Tech also engages in developing Electrical and Electronic Products like Solar based Grid tied and Standalone inverter, Home UPS Inverter, Laboratory Equipments for Engineering Colleges.</p>
         </div>
         
 <br><br>
@@ -62,7 +62,7 @@
         <p>ICMTEM - 2024 | Kanyakumari, India</p>
         <p>Call: +91 9840511458 , +91 8807068644 , +91 9363401105</p>
         <p>WhatsApp: +91 9840511458</p>
-        <p>Email: icmtem2024@gmail.com</p>
+        <p>Email: programs.abtech@gmail.com</p>
 
       </div>
       <div class="col-md-4 bg-light" style="padding:10px;">
