--- a/templates/papersub.html
+++ b/templates/papersub.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="static/style.css">
 </head>
-<body>
+<body style="background-color: #e9ecef;">
     <div class="mt-3">
-        <marquee ><h5>Dates to Remember: Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
+        <marquee ><h5><span style="color:red">Dates to Remember:</span> Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
       </div>
       
         
         {% include 'navbar.html' %}
-        <div class="bg-dark" style="height: 30vh;display:flex;justify-content:center;align-items:center" >
+        <div class="bg-dark" style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;" >
             <div><h1 style="color: azure;">PAPER SUBMISSION</h1></div>
         </div>
 <br><br><br>
-<div  class="jumbotron container" style="padding: 40px;">
+<div  class="jumbotron container bg-light p-5 shadow p-3 mb-5  rounded" style="padding: 40px;">
   <h1 class="text-center text-danger" style="font-weight:900;">PAPER SUBMISSION GUIDELINES</h1><hr class="bg-dark">
   
 <center>
@@ -43,7 +43,7 @@
 
 
 
-<br><br><br><br>
+<br><br>
 
 
 
@@ -64,7 +64,7 @@
         <p>ICMTEM - 2024 | Kanyakumari, India</p>
         <p>Call: +91 9840511458 , +91 8807068644 , +91 9363401105</p>
         <p>WhatsApp: +91 9840511458</p>
-        <p>Email: icmtem2024@gmail.com</p>
+        <p>Email: programs.abtech@gmail.com</p>
 
       </div>
       <div class="col-md-4 bg-light" style="padding:10px;">
