--- a/templates/presentationguide.html
+++ b/templates/presentationguide.html
@@ -9,13 +9,13 @@
 </head>
 <body style="background-color: #e9ecef;">
     <div class="mt-3">
-        <marquee ><h5>Dates to Remember: Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
+        <marquee ><h5><span style="color:red">Dates to Remember:</span> Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
       </div>
       
         
         {% include 'navbar.html' %}
 
-        <div class="bg-dark" style="height: 30vh;display:flex;justify-content:center;align-items:center" >
+        <div class="bg-dark" style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;" >
             <div><h1 style="color: azure;">PRESENTATION GUIDELINES</h1></div>
             
         </div>
@@ -72,7 +72,7 @@
         <p>ICMTEM - 2024 | Kanyakumari, India</p>
         <p>Call: +91 9840511458 , +91 8807068644 , +91 9363401105</p>
         <p>WhatsApp: +91 9840511458</p>
-        <p>Email: icmtem2024@gmail.com</p>
+        <p>Email: programs.abtech@gmail.com</p>
 
       </div>
       <div class="col-md-4 bg-light" style="padding:10px;">
