--- a/templates/registration.html
+++ b/templates/registration.html
@@ -108,7 +108,7 @@
 
           <br><br>
           <h3 style="font-weight:900;" class="text-danger">Online Presentation</h3><br>
-            <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:50px">If the Author wishes to present on online mode,it is not necessary to pay the co-author fee. Moreover,Participation certificate will be issued to all the co-author.</p>
+            <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:50px">If the Author wishes to present on online mode,it is not necessary to pay the co-author fee. Moreover,Participation certificate will be issued to all the co-authors.</p>
         </div>
 
 <br><br><br>
