--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -180,12 +180,12 @@
 
         </li>
           &nbsp; -->
-        <!-- <li class="nav-item">
+        <li class="nav-item">
 
           <a class="nav-link text-white" href="/contactus">Contactus</a>
 
         </li>
-          &nbsp; -->
+          &nbsp;
         
 
         </ul>
