--- a/templates/wca.html
+++ b/templates/wca.html
@@ -16,17 +16,18 @@
             
             {% include 'navbar.html' %}
             <div class="bg-dark" style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;" >
-                <div><h1 style="color: azure;">WHO CAN ATTEND </h1></div>
+                <div><h1 style="font-weight:900;" class="text-white">WHO CAN ATTEND | <span class="text-danger">CONFERENCE DETAILS</span> </h1></div>
             </div>
-    <br><br><br>
-
+    
+<br><br><br>
     
         <div class="container bg-light p-5 shadow p-3 mb-5  rounded w-50" >
-            <h1 style="color: darkblue;font-size:30px;">Who Can Attend Conference?</h1>
-            <div >
-            <h2 style="line-height: 200%;font-size:18px;">&#9733;Research Scholars. </h2>
-            <h2 style="line-height: 200%;font-size:18px;">&#9733;UG/PG Students</h2>
-            <h2 style="line-height: 200%;font-size:18px;">&#9733;Faculties</h2>
+            <h1 style="color: darkblue;font-size:30px;font-weight:900" class="text-center">Who Can Attend Conference?</h1>
+            <div  style="display:flex;justify-content:center">
+              
+            <h2 style="line-height: 200%;font-size:20px;">&#9733;Research Scholars.<br>&#9733;UG/PG Students<br>&#9733;Faculties </h2>
+           
+              </div>
         </div>
         </div>
         
