--- a/templates/papersub.html
+++ b/templates/papersub.html
@@ -15,7 +15,7 @@
         
         {% include 'navbar.html' %}
         <div class="bg-dark" style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;" >
-            <div><h1 style="color: azure;">PAPER SUBMISSION</h1></div>
+            <div><h1 style="font-weight:900;" class="text-white">PAPER SUBMISSION</h1></div>
         </div>
 <br><br><br>
 <div  class="jumbotron container bg-light p-5 shadow p-3 mb-5  rounded" style="padding: 40px;">
