--- a/templates/registration.html
+++ b/templates/registration.html
@@ -16,7 +16,7 @@
         {% include 'navbar.html' %}
 
         <div class="bg-dark"style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;">
-            <div><h1 style="color: azure;">REGISTRATION GUIDELINES</h1></div>
+            <div><h1 style="font-weight:900;" class="text-white">REGISTRATION GUIDELINES</h1></div>
             
         </div>
 
@@ -96,7 +96,7 @@
         <br><br><br>
 
         <div class="container">
-            <h1 class="text-center" style="font-weight:900;text-shadow: 2px 2px 4px #000000;text-transform:uppercase">PARTICIPATION DETAILS</h1><br><br>
+            <h1 class="text-center text-danger" style="font-weight:900;text-shadow: 2px 2px 4px #000000;text-transform:uppercase">PARTICIPATION DETAILS</h1><br><br>
           <h3 style="font-weight:900;" class="text-danger">Corresponding Author</h3><br>
             <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:50px">For a paper to be included in the proceedings and scheduled for presentation, at least one of the authors must be a registered participant in the conference. Members who wish to participate may register for the fees listed below. Once the payment is completed send the screenshot of the receipt to icmtem2024@gmail.com</p>
 
@@ -108,7 +108,7 @@
 
           <br><br>
           <h3 style="font-weight:900;" class="text-danger">Online Presentation</h3><br>
-            <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:50px">If the Author wishes to present on online mode,it is not necessary to pay the co-author fee. Moreover,Participation certificate will be issued to all the co-authors.</p>
+            <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:50px">If the Author wishes to present in online mode , it is not necessary to pay the co-author fee. Moreover, participation certificate will be issued to all the co-authors.</p>
         </div>
 
 <br><br><br>
