--- a/templates/sccommittee.html
+++ b/templates/sccommittee.html
@@ -14,7 +14,7 @@
    {% include 'navbar.html' %}
 
   <div class="bg-dark" style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;">
-    <div><h1 style="color: azure;">SCIENTIFIC COMMITTEE</h1></div>
+    <div><h1 style="font-weight:900;" class="text-white">SCIENTIFIC COMMITTEE</h1></div>
 
   </div>
 
