--- a/templates/intcommittee.html
+++ b/templates/intcommittee.html
@@ -24,13 +24,13 @@
   <center>
   <div class=" text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
   ,#0083b0);">
-    <img src="static/images/thomas.JPG" width="30%" height="300px" style="border-radius:10px">
+    <img src="static/images/thomas.JPG" width="30%" height="300px" class="img-fluid" style="border-radius:10px">
     <br><br>
-    <h1 style="font-size:2vw;font-weight:900">Dr. T. J. Thomas Thangam</h1><hr class="bg-light">
-    <h3 style="font-size:1.5vw">Department of Process Engineering </h3>
-    <h3 style="font-size:1.5vw">International Maritime  College Oman</h3>
-    <h3 style="font-size:1.5vw">National University of Science and Technology</h3>
-    <h3 style="font-size:1.5vw">Sohar, Sultanate of Oman.</h3>
+    <h1 style="font-size:20px;font-weight:900">Dr. T. J. Thomas Thangam</h1><hr class="bg-light">
+    <h3 style="font-size:18px">Department of Process Engineering </h3>
+    <h3 style="font-size:18px">International Maritime  College Oman</h3>
+    <h3 style="font-size:18px">National University of Science and Technology</h3>
+    <h3 style="font-size:18px">Sohar, Sultanate of Oman.</h3>
   </div>
   </center>
     <br><br><br>
@@ -39,11 +39,11 @@
       ,#0083b0);">
         <img src="static/images/anand.JPG" width="30%" style="border-radius:10px;">
         <br><br>
-        <h1 style="font-size:2vw;font-weight:900">Anandh Sam Chandra Bose</h1><hr class="bg-light">
-        <h3 style="font-size:1.5vw">Assistant Professor</h3>
-        <h3 style="font-size:1.5vw">Faculty of Applied Medical Science</h3>
-        <h3 style="font-size:1.5vw">AlMaarefa University</h3>
-        <h3 style="font-size:1.5vw">Kingdom of Saudi Arabia.</h3>
+        <h1 style="font-size:20px;font-weight:900">Anandh Sam Chandra Bose</h1><hr class="bg-light">
+        <h3 style="font-size:18px">Assistant Professor</h3>
+        <h3 style="font-size:18px">Faculty of Applied Medical Science</h3>
+        <h3 style="font-size:18px">AlMaarefa University</h3>
+        <h3 style="font-size:18px">Kingdom of Saudi Arabia.</h3>
       </div>
       </center>
   </div>
