--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -94,6 +94,12 @@
         </li>
 
         &nbsp;
+        <li class="nav-item">
+
+          <a class="nav-link text-white" href="/chiefguests">Chief Guests</a>
+
+        </li>
+          &nbsp;
       <!-- &nbsp;     &nbsp; &nbsp; &nbsp;      -->
 
         <!-- <li class="nav-item">
