--- a/templates/orgcommittee.html
+++ b/templates/orgcommittee.html
@@ -27,7 +27,7 @@
             <h1 class="text-center text-danger" style="font-weight:900">CONVENER</h1><hr>
         </div>
         <center>
-        <div class=" text-white" style="width:70%;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
+        <div class=" text-white shadow p-3 mb-5  rounded" style="width:70%;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
 ,#0083b0);">
             <h1 style="font-size:2vw;font-weight:900">Dr. A. R. Gayathri</h1><hr class="bg-light">
             <h3 style="font-size:1.5vw">Associate Professor & Head</h3>
@@ -40,31 +40,31 @@
 <div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
     <h1 class="text-center text-danger" style="font-weight:900">CO- CONVENERS</h1><hr>
         <div style="display: flex;flex-wrap:wrap;justify-content:space-around;">
-            <div class="bg-info  mt-5 text-white" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+            <div class="shadow p-3 mb-5 bg-light rounded mt-5 text-white" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
                 <h1 style="font-size:2vw;font-weight:900">Dr. R. K. Madhumathi</h1><hr class="bg-light">
                 <h3 style="font-size:1.5vw">Associate Professor & Head</h3>
                 <h3 style="font-size:1.5vw">Department of  Civil Engineering </h3>
                 <h3 style="font-size:1.5vw">Stella Mary's College of Engineering</h3>
             </div>
-            <div class="bg-info  mt-5 text-white" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+            <div class="shadow p-3 mb-5  rounded  mt-5 text-white" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
                 <h1 style="font-size:2vw;font-weight:900">Dr. F .R. Shiny Malar</h1><hr class="bg-light">
                 <h3 style="font-size:1.5vw"> Professor & Head</h3>
                 <h3 style="font-size:1.5vw">Department of Computer Science and Engineering </h3>
                 <h3 style="font-size:1.5vw">Stella Mary's College of Engineering</h3>
             </div>
-            <div class="bg-info  mt-5 text-white" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+            <div class="shadow p-3 mb-5 bg-light rounded  mt-5 text-white" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
                 <h1 style="font-size:2vw;font-weight:900">Mr N. Michael Franklin</h1><hr class="bg-light">
                 <h3 style="font-size:1.5vw">Associate Professor & Head</h3>
                 <h3 style="font-size:1.5vw">Department of Electrical and Electronics Engineering </h3>
                 <h3 style="font-size:1.5vw">Stella Mary's College of Engineering</h3>
             </div>
-            <div class="bg-info  mt-5 text-white" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+            <div class="shadow p-3 mb-5  rounded  mt-5 text-white" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
                 <h1 style="font-size:2vw;font-weight:900">Dr. F. Michael Raj</h1><hr class="bg-light">
                 <h3 style="font-size:1.5vw"> Professor & Head</h3>
                 <h3 style="font-size:1.5vw">Department of Mechanical Engineering </h3>
                 <h3 style="font-size:1.5vw">Stella Mary's College of Engineering</h3>
             </div>
-            <div class="bg-info  mt-5 text-white" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+            <div class="shadow p-3 mb-5 bg-light rounded  mt-5 text-white" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
                 <h1 style="font-size:2vw;font-weight:900">Mr. S. Ravi Kumar</h1><hr class="bg-light">
                 <h3 style="font-size:1.5vw">Associate Professor & Head</h3>
                 <h3 style="font-size:1.5vw">Department of Science and Humanities </h3>
@@ -78,47 +78,47 @@
 <div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
     <h1 class="text-center text-danger" style="font-weight:900">CO-ORDINATORS</h1><hr>
         <div style="display: flex;flex-wrap:wrap;justify-content:space-around;" class="text-white">
-            <div class="bg-info  mt-5" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+            <div class="shadow p-3 mb-5  rounded  mt-5" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
                 <h1 style="font-size:2vw;font-weight:900">Dr. K. Ezhil Vignesh</h1><hr class="bg-light">
                 <h3 style="font-size:1.5vw">Associate Professor & IQAC coordinator</h3>
                 <h3 style="font-size:1.5vw">Department of Electrical and Electronics Engineering </h3>
                 <h3 style="font-size:1.5vw">Stella Mary's College of Engineering</h3>
             </div>
-            <div class="bg-info  mt-5" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+            <div class="shadow p-3 mb-5  rounded  mt-5" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
                 <h1 style="font-size:2vw;font-weight:900">Mrs. J. Jasmine</h1><hr class="bg-light">
                 <h3 style="font-size:1.5vw"> Assistant Professor</h3>
                 <h3 style="font-size:1.5vw">Department of Electrical and Electronics Engineering </h3>
                 <h3 style="font-size:1.5vw">Stella Mary's College of Engineering</h3>
             </div>
-            <div class="bg-info  mt-5" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+            <div class="shadow p-3 mb-5  rounded  mt-5" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
                 <h1 style="font-size:2vw;font-weight:900">Mr. C. Milton</h1><hr class="bg-light">
                 <h3 style="font-size:1.5vw">Assistant Professor </h3>
                 <h3 style="font-size:1.5vw">Department of Electrical and Electronics Engineering </h3>
                 <h3 style="font-size:1.5vw">Stella Mary's College of Engineering</h3>
             </div>
-            <div class="bg-info  mt-5" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+            <div class="shadow p-3 mb-5  rounded  mt-5" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
                 <h1 style="font-size:2vw;font-weight:900">Ms. A. Annie Steffy Beula</h1><hr class="bg-light">
                 <h3 style="font-size:1.5vw"> Assistant Professor</h3>
                 <h3 style="font-size:1.5vw">Department of Electrical and Electronics Engineering </h3>
                 <h3 style="font-size:1.5vw">Stella Mary's College of Engineering</h3>
             </div>
-            <div class="bg-info  mt-5" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+            <div class="shadow p-3 mb-5  rounded  mt-5" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
                 <h1 style="font-size:2vw;font-weight:900">Mr. J. Stanly Selva Kumar</h1><hr class="bg-light">
                 <h3 style="font-size:1.5vw">Assistant Professor</h3>
                 <h3 style="font-size:1.5vw">Department of Electrical and Electronics Engineering </h3>
                 <h3 style="font-size:1.5vw">Stella Mary's College of Engineering</h3>
             </div>
-            <div class="bg-info  mt-5" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
-                <h1 style="font-size:2vw;font-weight:900">Mrs. S. Chithra</h1><hr class="bg-light">
-                <h3 style="font-size:1.5vw">Assistant Professor</h3>
-                <h3 style="font-size:1.5vw">Department of Electrical and Electronics Engineering</h3>
-                <h3 style="font-size:1.5vw">Stella Mary's College of Engineering</h3>
+            <div class="shadow p-3 mb-5  rounded  mt-5" style="width:500px;height: 220px;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+                <h1 style="font-size:20px;font-weight:900">Mrs. S. Chithra</h1><hr class="bg-light">
+                <h3 style="font-size:18px">Assistant Professor</h3>
+                <h3 style="font-size:18px">Department of Electrical and Electronics Engineering</h3>
+                <h3 style="font-size:18px">Stella Mary's College of Engineering</h3>
             </div>
-            <div class="bg-info  mt-5" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+            <div class="shadow p-3 mb-5  rounded  mt-5" style="width:500px;height: 200px;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
                 <h1 style="font-size:2vw;font-weight:900">Mr. C. Suyambulingarajan</h1><hr class="bg-light">
-                <h3 style="font-size:1.5vw">Assistant Professor</h3>
-                <h3 style="font-size:1.5vw">Department of Electrical and Electronics Engineering </h3>
-                <h3 style="font-size:1.5vw">Stella Mary's College of Engineering</h3>
+                <h3 style="font-size:18px">Assistant Professor</h3>
+                <h3 style="font-size:18px">Department of Electrical and Electronics Engineering </h3>
+                <h3 style="font-size:18px">Stella Mary's College of Engineering</h3>
             </div>
         </div>
     </div>
