--- a/templates/nacommittee.html
+++ b/templates/nacommittee.html
@@ -14,7 +14,7 @@
    {% include 'navbar.html' %}
 
   <div class="bg-dark" style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;">
-    <div><h1 style="font-weight:900;" class="text-white">NATIONAL ADVISORY COMMITTEE</h1></div>
+    <div><h1 style="font-weight:900;" class="text-white">NATIONAL ADVISORY | <span class="text-danger">COMMITTEE</span></h1></div>
 
   </div>
 
@@ -26,11 +26,11 @@
   ,#0083b0);">
     <img src="static/images/murali.JPG" width="200px" style="border-radius:10px">
     <br><br>
-    <h1 style="font-size:2vw;font-weight:900">Murali Matcha</h1><hr class="bg-light">
-    <h3 style="font-size:1.5vw">Associate Professor </h3>
-    <h3 style="font-size:1.5vw">Department of Electrical Engineering</h3>
-    <h3 style="font-size:1.5vw">Medicaps University</h3>
-    <h3 style="font-size:1.5vw">Indore, Madhya Pradesh, India.</h3>
+    <h1 style="font-size:20px;font-weight:900">Murali Matcha</h1><hr class="bg-light">
+    <h3 style="font-size:18px">Associate Professor </h3>
+    <h3 style="font-size:18px">Department of Electrical Engineering</h3>
+    <h3 style="font-size:18px">Medicaps University</h3>
+    <h3 style="font-size:18px">Indore, Madhya Pradesh, India.</h3>
   </div>
   </center>
 <br><br>
@@ -39,11 +39,11 @@
       <div class=" text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
       ,#0083b0);">
        
-        <h1 style="font-size:2vw;font-weight:900">Dr. J.A.SMITHA</h1><hr class="bg-light">
-        <h3 style="font-size:1.5vw">HOD and Professor </h3>
-        <h3 style="font-size:1.5vw">Department of Computer Science and Engineering</h3>
-        <h3 style="font-size:1.5vw">Sri Sairam College of Engineering</h3>
-        <h3 style="font-size:1.5vw">Anekal, Bangalure</h3>
+        <h1 style="font-size:20px;font-weight:900">Dr. J.A.SMITHA</h1><hr class="bg-light">
+        <h3 style="font-size:18px">HOD and Professor </h3>
+        <h3 style="font-size:18px">Department of Computer Science and Engineering</h3>
+        <h3 style="font-size:18px">Sri Sairam College of Engineering</h3>
+        <h3 style="font-size:18px">Anekal, Bangalure</h3>
       </div>
       </center>
 
