--- a/templates/nta.html
+++ b/templates/nta.html
@@ -16,7 +16,7 @@
 
             {% include 'navbar.html' %}
             <div class="bg-dark" style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;" >
-                <div><h1 style="font-weight:900;" class="text-white">NEED TO ATTEND </h1></div>
+                <div><h1 style="font-weight:900;" class="text-white">NEED TO ATTEND | <span class="text-danger">CONFERENCE DETAILS</span> </h1></div>
             </div>
     <br><br><br>
 
