--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -26,54 +26,29 @@
               </div>
   <br><br><br>
   
-  <div class="container " >
-    <h1  style="color: darkblue;font-size:30px;font-weight:900" class="text-center">International Conference on Modern Trends in Engineering and Management (ICMTEM-24)</h1>
-    <center>
-      <br>
-   <div  class=" bg-light p-5 shadow p-3 mb-5  rounded w-50">
-    
-    <!-- <h2 style="line-height: 200%;font-size:24px;"><b>Registrations and Payments Inquiries</b><br><span class="text-danger"><b>Call:</b></span>
-  +91 9840511458 ,+91 8807068644 ,<br> +91 9363401105<br>
-      <span class="text-danger"><b>WhatsApp: </b></span> +91 9840511458<br><span class="text-danger"><b>Email:</b></span> programs.abtech@gmail.com
-    </h2> -->
-     <h2 style="line-height: 200%;font-size:24px;font-weight:900">Registrations and Payments Inquiries</h2>
-     <table  >
-       <tr>
-         <th  class="text-danger" style="font-size:24px;">Contact:</th>
-         <td style="font-size:24px;">+91 9840511458</td>
-         
-       </tr>
-       
-       <tr>
-         <td></td>
-         <td style="font-size:24px;">+91 8807068644</td>
-       </tr>
-       <tr>
-         <td></td>
-         <td style="font-size:24px;">+91 9363401105</td>
-       </tr>
-       
-       <tr>
-         
-         <th  class="text-danger" style="font-size:24px;">WhatsApp: </th>
-          <td style="font-size:24px;">+91 9840511458</td>
-        </tr>
-       <tr>
-        <th  class="text-danger" style="font-size:24px;"> Email ID:  </th>
-         <td style="font-size:24px;">programs.abtech@gmail.com</td>
-       </tr>
-     </table>
-   </div>
-      </center>
-    <!-- <h2 style="line-height: 200%;font-size:20px;"></h2>
-    <h2 style="line-height: 200%;font-size:20px;"></h2>
-      <h2 style="line-height: 200%;font-size:20px;"></h2> -->
-  
+  <div class="container ">
+    <div class="row ">
+      <div class="col-md-8 shadow p-3 mb-5 bg-light rounded" >
+    <h3 style="color: darkblue;font-weight:900">International Conference on Modern Trends in Engineering and Management (ICMTEM-24)</h3>
+   <br>
+     <h4 style="font-weight:900">Registrations and Payments Inquiries</h4>
+<br>
+     <h5 style="font-weight:900" ><span class="text-danger">Contact Number:</span> +91 9840511458 , +91 8807068644 , +91 9363401105</h5> 
+   <br>
+     <h5 style="font-weight:900" ><span class="text-danger">WhatsApp:</span> +91 9840511458</h5>
+     <br>
+     <h5 style="font-weight:900" > <span class="text-danger">Email:</span> programs.abtech@gmail.com</h5>   
+
+    </div>
+
+       <div class="col-md-4">
+         <img src="static/images/contact.jpg"   width="100%" height="330px">
+       </div>
   </div>
 
   </div>
 
-<br><br>
+
     <div class="jumbotron" style="margin:0px">
       <br><br>
       <div class="container ">
@@ -101,7 +76,7 @@
     </div>
 
     </div>
-  </body>
+</body>
 
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
