--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -188,6 +188,13 @@
           &nbsp; -->
         <li class="nav-item">
 
+          <a class="nav-link text-white" href="/venue">Venue</a>
+
+        </li>
+          &nbsp;
+        
+        <li class="nav-item">
+
           <a class="nav-link text-white" href="/contactus">Contactus</a>
 
         </li>
