--- a/templates/orgcommittee.html
+++ b/templates/orgcommittee.html
@@ -16,59 +16,59 @@
         {% include 'navbar.html' %}
 
         <div class="bg-dark" style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;">
-            <div><h1 style="font-weight:900;" class="text-white">ORGANIZING COMMITTEE</h1></div>
+            <div><h1 style="font-weight:900;" class="text-white">ORGANIZING | <span class="text-danger">COMMITTEE</span></h1></div>
 
         </div>
 
         <br><br><br>
-
-        <div class="container jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
-            <div>
-            <h1 class="text-center text-danger" style="font-weight:900">CONVENER</h1><hr>
-        </div>
-        <center>
-        <div class=" text-white shadow p-3 mb-5  rounded" style="width:70%;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
-,#0083b0);">
-            <h1 style="font-size:2vw;font-weight:900">Dr. A. R. Gayathri</h1><hr class="bg-light">
-            <h3 style="font-size:1.5vw">Associate Professor & Head</h3>
-            <h3 style="font-size:1.5vw">Department of Electrical and Electronics Engineering </h3>
-            <h3 style="font-size:1.5vw">Stella Mary's College of Engineering</h3>
-        </div>
-        </center>
-        </div>
+  <div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
+    <h1 class="text-center text-danger" style="font-weight:900">CONVENERS</h1><hr>
+    <div style="display: flex;flex-wrap:wrap;justify-content:space-around;">
+       <div class="shadow p-3 mb-5 bg-light rounded mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+           <h1 style="font-size:20px;font-weight:900">Dr. A. R. Gayathri</h1><hr class="bg-light">
+           <h3 style="font-size:18px">Associate Professor & Head</h3>
+           <h3 style="font-size:18px">Department of Electrical and Electronics Engineering  </h3>
+           <h3 style="font-size:18px">Stella Mary's College of Engineering</h3>
+       </div>
+  </div>
+</div>
+  
 <br><br><br>
+
+
+  
 <div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
     <h1 class="text-center text-danger" style="font-weight:900">CO- CONVENERS</h1><hr>
         <div style="display: flex;flex-wrap:wrap;justify-content:space-around;">
-            <div class="shadow p-3 mb-5 bg-light rounded mt-5 text-white" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
-                <h1 style="font-size:2vw;font-weight:900">Dr. R. K. Madhumathi</h1><hr class="bg-light">
-                <h3 style="font-size:1.5vw">Associate Professor & Head</h3>
-                <h3 style="font-size:1.5vw">Department of  Civil Engineering </h3>
-                <h3 style="font-size:1.5vw">Stella Mary's College of Engineering</h3>
+            <div class="shadow p-3 mb-5 bg-light rounded mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+                <h1 style="font-size:20px;font-weight:900">Dr. R. K. Madhumathi</h1><hr class="bg-light">
+                <h3 style="font-size:18px">Associate Professor & Head</h3>
+                <h3 style="font-size:18px">Department of  Civil Engineering </h3>
+                <h3 style="font-size:18px">Stella Mary's College of Engineering</h3>
             </div>
-            <div class="shadow p-3 mb-5  rounded  mt-5 text-white" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
-                <h1 style="font-size:2vw;font-weight:900">Dr. F .R. Shiny Malar</h1><hr class="bg-light">
-                <h3 style="font-size:1.5vw"> Professor & Head</h3>
-                <h3 style="font-size:1.5vw">Department of Computer Science and Engineering </h3>
-                <h3 style="font-size:1.5vw">Stella Mary's College of Engineering</h3>
+            <div class="shadow p-3 mb-5  rounded  mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+                <h1 style="font-size:20px;font-weight:900">Dr. F .R. Shiny Malar</h1><hr class="bg-light">
+                <h3 style="font-size:18px"> Professor & Head</h3>
+                <h3 style="font-size:18px">Department of Computer Science and Engineering </h3>
+                <h3 style="font-size:18px">Stella Mary's College of Engineering</h3>
             </div>
-            <div class="shadow p-3 mb-5 bg-light rounded  mt-5 text-white" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
-                <h1 style="font-size:2vw;font-weight:900">Mr N. Michael Franklin</h1><hr class="bg-light">
-                <h3 style="font-size:1.5vw">Associate Professor & Head</h3>
-                <h3 style="font-size:1.5vw">Department of Electrical and Electronics Engineering </h3>
-                <h3 style="font-size:1.5vw">Stella Mary's College of Engineering</h3>
+            <div class="shadow p-3 mb-5 bg-light rounded  mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+                <h1 style="font-size:20px;font-weight:900">Mr N. Michael Franklin</h1><hr class="bg-light">
+                <h3 style="font-size:18px">Associate Professor & Head</h3>
+                <h3 style="font-size:18px">Department of Electrical and Electronics Engineering </h3>
+                <h3 style="font-size:18px">Stella Mary's College of Engineering</h3>
             </div>
-            <div class="shadow p-3 mb-5  rounded  mt-5 text-white" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
-                <h1 style="font-size:2vw;font-weight:900">Dr. F. Michael Raj</h1><hr class="bg-light">
-                <h3 style="font-size:1.5vw"> Professor & Head</h3>
-                <h3 style="font-size:1.5vw">Department of Mechanical Engineering </h3>
-                <h3 style="font-size:1.5vw">Stella Mary's College of Engineering</h3>
+            <div class="shadow p-3 mb-5  rounded  mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+                <h1 style="font-size:20px;font-weight:900">Dr. F. Michael Raj</h1><hr class="bg-light">
+                <h3 style="font-size:18px"> Professor & Head</h3>
+                <h3 style="font-size:18px">Department of Mechanical Engineering </h3>
+                <h3 style="font-size:18px">Stella Mary's College of Engineering</h3>
             </div>
-            <div class="shadow p-3 mb-5 bg-light rounded  mt-5 text-white" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
-                <h1 style="font-size:2vw;font-weight:900">Mr. S. Ravi Kumar</h1><hr class="bg-light">
-                <h3 style="font-size:1.5vw">Associate Professor & Head</h3>
-                <h3 style="font-size:1.5vw">Department of Science and Humanities </h3>
-                <h3 style="font-size:1.5vw">Stella Mary's College of Engineering</h3>
+            <div class="shadow p-3 mb-5 bg-light rounded  mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+                <h1 style="font-size:20px;font-weight:900">Mr. S. Ravi Kumar</h1><hr class="bg-light">
+                <h3 style="font-size:18px">Associate Professor & Head</h3>
+                <h3 style="font-size:18px">Department of Science and Humanities </h3>
+                <h3 style="font-size:18px">Stella Mary's College of Engineering</h3>
             </div>
         </div>
     </div>
@@ -78,44 +78,44 @@
 <div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
     <h1 class="text-center text-danger" style="font-weight:900">CO-ORDINATORS</h1><hr>
         <div style="display: flex;flex-wrap:wrap;justify-content:space-around;" class="text-white">
-            <div class="shadow p-3 mb-5  rounded  mt-5" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
-                <h1 style="font-size:2vw;font-weight:900">Dr. K. Ezhil Vignesh</h1><hr class="bg-light">
-                <h3 style="font-size:1.5vw">Associate Professor & IQAC coordinator</h3>
-                <h3 style="font-size:1.5vw">Department of Electrical and Electronics Engineering </h3>
-                <h3 style="font-size:1.5vw">Stella Mary's College of Engineering</h3>
+            <div class="shadow p-3 mb-5  rounded  mt-5" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+                <h1 style="font-size:20px;font-weight:900">Dr. K. Ezhil Vignesh</h1><hr class="bg-light">
+                <h3 style="font-size:18px">Associate Professor & IQAC coordinator</h3>
+                <h3 style="font-size:18px">Department of Electrical and Electronics Engineering </h3>
+                <h3 style="font-size:18px">Stella Mary's College of Engineering</h3>
             </div>
-            <div class="shadow p-3 mb-5  rounded  mt-5" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
-                <h1 style="font-size:2vw;font-weight:900">Mrs. J. Jasmine</h1><hr class="bg-light">
-                <h3 style="font-size:1.5vw"> Assistant Professor</h3>
-                <h3 style="font-size:1.5vw">Department of Electrical and Electronics Engineering </h3>
-                <h3 style="font-size:1.5vw">Stella Mary's College of Engineering</h3>
+            <div class="shadow p-3 mb-5  rounded  mt-5" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+                <h1 style="font-size:20px;font-weight:900">Mrs. J. Jasmine</h1><hr class="bg-light">
+                <h3 style="font-size:18px"> Assistant Professor</h3>
+                <h3 style="font-size:18px">Department of Electrical and Electronics Engineering </h3>
+                <h3 style="font-size:18px">Stella Mary's College of Engineering</h3>
             </div>
-            <div class="shadow p-3 mb-5  rounded  mt-5" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
-                <h1 style="font-size:2vw;font-weight:900">Mr. C. Milton</h1><hr class="bg-light">
-                <h3 style="font-size:1.5vw">Assistant Professor </h3>
-                <h3 style="font-size:1.5vw">Department of Electrical and Electronics Engineering </h3>
-                <h3 style="font-size:1.5vw">Stella Mary's College of Engineering</h3>
+            <div class="shadow p-3 mb-5  rounded  mt-5" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+                <h1 style="font-size:20px;font-weight:900">Mr. C. Milton</h1><hr class="bg-light">
+                <h3 style="font-size:18px">Assistant Professor </h3>
+                <h3 style="font-size:18px">Department of Electrical and Electronics Engineering </h3>
+                <h3 style="font-size:18px">Stella Mary's College of Engineering</h3>
             </div>
-            <div class="shadow p-3 mb-5  rounded  mt-5" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
-                <h1 style="font-size:2vw;font-weight:900">Ms. A. Annie Steffy Beula</h1><hr class="bg-light">
-                <h3 style="font-size:1.5vw"> Assistant Professor</h3>
-                <h3 style="font-size:1.5vw">Department of Electrical and Electronics Engineering </h3>
-                <h3 style="font-size:1.5vw">Stella Mary's College of Engineering</h3>
+            <div class="shadow p-3 mb-5  rounded  mt-5" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+                <h1 style="font-size:20px;font-weight:900">Ms. A. Annie Steffy Beula</h1><hr class="bg-light">
+                <h3 style="font-size:18px"> Assistant Professor</h3>
+                <h3 style="font-size:18px">Department of Electrical and Electronics Engineering </h3>
+                <h3 style="font-size:18px">Stella Mary's College of Engineering</h3>
             </div>
-            <div class="shadow p-3 mb-5  rounded  mt-5" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
-                <h1 style="font-size:2vw;font-weight:900">Mr. J. Stanly Selva Kumar</h1><hr class="bg-light">
-                <h3 style="font-size:1.5vw">Assistant Professor</h3>
-                <h3 style="font-size:1.5vw">Department of Electrical and Electronics Engineering </h3>
-                <h3 style="font-size:1.5vw">Stella Mary's College of Engineering</h3>
+            <div class="shadow p-3 mb-5  rounded  mt-5" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+                <h1 style="font-size:20px;font-weight:900">Mr. J. Stanly Selva Kumar</h1><hr class="bg-light">
+                <h3 style="font-size:18px">Assistant Professor</h3>
+                <h3 style="font-size:18px">Department of Electrical and Electronics Engineering </h3>
+                <h3 style="font-size:18px">Stella Mary's College of Engineering</h3>
             </div>
-            <div class="shadow p-3 mb-5  rounded  mt-5" style="width:500px;height: 220px;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+            <div class="shadow p-3 mb-5  rounded  mt-5" style="width:500px;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
                 <h1 style="font-size:20px;font-weight:900">Mrs. S. Chithra</h1><hr class="bg-light">
                 <h3 style="font-size:18px">Assistant Professor</h3>
                 <h3 style="font-size:18px">Department of Electrical and Electronics Engineering</h3>
                 <h3 style="font-size:18px">Stella Mary's College of Engineering</h3>
             </div>
-            <div class="shadow p-3 mb-5  rounded  mt-5" style="width:500px;height: 200px;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
-                <h1 style="font-size:2vw;font-weight:900">Mr. C. Suyambulingarajan</h1><hr class="bg-light">
+            <div class="shadow p-3 mb-5  rounded  mt-5" style="width:500px;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+                <h1 style="font-size:20px;font-weight:900">Mr. C. Suyambulingarajan</h1><hr class="bg-light">
                 <h3 style="font-size:18px">Assistant Professor</h3>
                 <h3 style="font-size:18px">Department of Electrical and Electronics Engineering </h3>
                 <h3 style="font-size:18px">Stella Mary's College of Engineering</h3>
@@ -124,6 +124,71 @@
     </div>
 
     <br><br><br><br>
+
+  <h1 class="text-center" style="text-shadow: 2px 2px 4px #000000;font-weight:900;">AB TECHNOLOGIES</h1>
+  <br>
+  <div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
+      <h1 class="text-center text-danger" style="font-weight:900">CONVENERS</h1><hr>
+      <div style="display: flex;flex-wrap:wrap;justify-content:space-around;">
+         <div class="shadow p-3 mb-5 bg-light rounded mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+             <h1 style="font-size:20px;font-weight:900">Mr. K.S. Kavin </h1><hr class="bg-light">
+             <h3 style="font-size:18px">Managing Director</h3>
+             <h3 style="font-size:18px">AB Technologies ,Nagercoil.</h3>
+             
+         </div>
+        <div class="shadow p-3 mb-5 bg-light rounded mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+             <h1 style="font-size:20px;font-weight:900">Ms. A.T.R. Krishna Priya  </h1><hr class="bg-light">
+             <h3 style="font-size:18px">Managing Director</h3>
+             <h3 style="font-size:18px">AB Technologies , Nagercoil.</h3>
+             
+         </div>
+        
+    </div>
+  </div>
+
+   <br><br><br>
+    <div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
+      <h1 class="text-center text-danger" style="font-weight:900">CO-CONVENERS</h1><hr>
+      <div style="display: flex;flex-wrap:wrap;justify-content:space-around;">
+         <div class="shadow p-3 mb-5 bg-light rounded mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+             <h1 style="font-size:20px;font-weight:900">Ms. R. Sivanagini </h1><hr class="bg-light">
+             <h3 style="font-size:18px">Senior R&D Engineer & Technical Head</h3>
+             <h3 style="font-size:18px">AB Technologies , Nagercoil. </h3>
+             
+         </div>
+    </div>
+  </div>
+
+  <br><br><br>
+    <div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
+      <h1 class="text-center text-danger" style="font-weight:900">CO-ORDINATORS</h1><hr>
+      <div style="display: flex;flex-wrap:wrap;justify-content:space-around;">
+         <div class="shadow p-3 mb-5 bg-light rounded mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+             <h1 style="font-size:20px;font-weight:900">Ms. R. Ramya </h1><hr class="bg-light">
+             <h3 style="font-size:18px"> R&D Engineer</h3>
+             <h3 style="font-size:18px">AB Technologies , Nagercoil. </h3>
+
+         </div>
+        <div class="shadow p-3 mb-5 bg-light rounded mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+             <h1 style="font-size:20px;font-weight:900">Ms. V. Deepthi </h1><hr class="bg-light">
+             <h3 style="font-size:18px"> R&D Engineer</h3>
+             <h3 style="font-size:18px">AB Technologies , Nagercoil. </h3>
+
+         </div>
+        <div class="shadow p-3 mb-5 bg-light rounded mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+             <h1 style="font-size:20px;font-weight:900">Mr. P. Ajithmurugan </h1><hr class="bg-light">
+             <h3 style="font-size:18px"> R&D Engineer</h3>
+             <h3 style="font-size:18px">AB Technologies , Nagercoil. </h3>
+
+         </div>
+        <div class="shadow p-3 mb-5 bg-light rounded mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+             <h1 style="font-size:20px;font-weight:900">Mr. V. Arun Siva  </h1><hr class="bg-light">
+             <h3 style="font-size:18px"> R&D Engineer</h3>
+             <h3 style="font-size:18px">AB Technologies , Nagercoil. </h3>
+
+         </div>
+    </div>
+  </div>
 
 
 
