--- a/templates/registration.html
+++ b/templates/registration.html
@@ -23,7 +23,7 @@
         
         <br><br><br>
 
-            <div class="container">
+            <div class="container" style="padding:30px">
                 <h1 class="text-center text-danger" style="font-weight:900;text-shadow: 2px 2px 4px #000000;text-transform:uppercase">Conference Registration</h1><br>
                 <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:50px">For a paper to be included in the proceedings and scheduled for presentation, at least one of the authors must be a registered participant in the conference. Members who wish to participate may register for the fees listed below. Once the payment is completed send the screenshot of the receipt to icmtem2024@gmail.com</p>
             </div>
@@ -95,7 +95,7 @@
     </center>
         <br><br><br>
 
-        <div class="container">
+        <div class="container" style="padding:30px">
             <h1 class="text-center text-danger" style="font-weight:900;text-shadow: 2px 2px 4px #000000;text-transform:uppercase">PARTICIPATION DETAILS</h1><br><br>
           <h3 style="font-weight:900;" class="text-danger">Corresponding Author</h3><br>
             <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:50px">For a paper to be included in the proceedings and scheduled for presentation, at least one of the authors must be a registered participant in the conference. Members who wish to participate may register for the fees listed below. Once the payment is completed send the screenshot of the receipt to icmtem2024@gmail.com</p>
