--- a/templates/abicmtem.html
+++ b/templates/abicmtem.html
@@ -13,7 +13,7 @@
         <marquee ><h5><span style="color:red">Dates to Remember:</span>Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
       </div>     
         {% include 'navbar.html' %}
-        <div class="bg-dark" style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;" >
+        <div  style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;" >
             <div><h1 style="font-weight:900;" class="text-white"><span class="text-danger">ABOUT</span> | ICMTEM</h1></div>
         </div>
 
