--- a/templates/orgcommittee.html
+++ b/templates/orgcommittee.html
@@ -15,14 +15,17 @@
 
         {% include 'navbar.html' %}
 
-        <div class="bg-dark" style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;">
+        <div  style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;">
             <div><h1 style="font-weight:900;" class="text-white">ORGANIZING | <span class="text-danger">COMMITTEE</span></h1></div>
 
         </div>
 
         <br><br><br>
+  <h1 class="text-center" style="text-shadow: 2px 2px 4px #000000;font-weight:900;text-transform:uppercase">Stella Mary's College of Engineering</h1>
+  <br><br>
+  
   <div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
-    <h1 class="text-center text-danger" style="font-weight:900">CONVENERS</h1><hr>
+    <h1 class="text-center text-danger" style="font-weight:900">CONVENERS</h1><hr class="bg-dark">
     <div style="display: flex;flex-wrap:wrap;justify-content:space-around;">
        <div class="shadow p-3 mb-5 bg-light rounded mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
            <h1 style="font-size:20px;font-weight:900">Dr. A. R. Gayathri</h1><hr class="bg-light">
@@ -38,7 +41,7 @@
 
   
 <div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
-    <h1 class="text-center text-danger" style="font-weight:900">CO- CONVENERS</h1><hr>
+    <h1 class="text-center text-danger" style="font-weight:900">CO- CONVENERS</h1><hr class="bg-dark">
         <div style="display: flex;flex-wrap:wrap;justify-content:space-around;">
             <div class="shadow p-3 mb-5 bg-light rounded mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
                 <h1 style="font-size:20px;font-weight:900">Dr. R. K. Madhumathi</h1><hr class="bg-light">
@@ -76,7 +79,7 @@
 
     <br><br><br>
 <div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
-    <h1 class="text-center text-danger" style="font-weight:900">CO-ORDINATORS</h1><hr>
+    <h1 class="text-center text-danger" style="font-weight:900">CO-ORDINATORS</h1><hr class="bg-dark">
         <div style="display: flex;flex-wrap:wrap;justify-content:space-around;" class="text-white">
             <div class="shadow p-3 mb-5  rounded  mt-5" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
                 <h1 style="font-size:20px;font-weight:900">Dr. K. Ezhil Vignesh</h1><hr class="bg-light">
@@ -126,9 +129,9 @@
     <br><br><br><br>
 
   <h1 class="text-center" style="text-shadow: 2px 2px 4px #000000;font-weight:900;">AB TECHNOLOGIES</h1>
-  <br>
+  <br><br>
   <div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
-      <h1 class="text-center text-danger" style="font-weight:900">CONVENERS</h1><hr>
+      <h1 class="text-center text-danger" style="font-weight:900">CONVENERS</h1><hr class="bg-dark">
       <div style="display: flex;flex-wrap:wrap;justify-content:space-around;">
          <div class="shadow p-3 mb-5 bg-light rounded mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
              <h1 style="font-size:20px;font-weight:900">Mr. K.S. Kavin </h1><hr class="bg-light">
@@ -148,7 +151,7 @@
 
    <br><br><br>
     <div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
-      <h1 class="text-center text-danger" style="font-weight:900">CO-CONVENERS</h1><hr>
+      <h1 class="text-center text-danger" style="font-weight:900">CO-CONVENERS</h1><hr class="bg-dark">
       <div style="display: flex;flex-wrap:wrap;justify-content:space-around;">
          <div class="shadow p-3 mb-5 bg-light rounded mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
              <h1 style="font-size:20px;font-weight:900">Ms. R. Sivanagini </h1><hr class="bg-light">
@@ -161,7 +164,7 @@
 
   <br><br><br>
     <div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
-      <h1 class="text-center text-danger" style="font-weight:900">CO-ORDINATORS</h1><hr>
+      <h1 class="text-center text-danger" style="font-weight:900">CO-ORDINATORS</h1><hr class="bg-dark">
       <div style="display: flex;flex-wrap:wrap;justify-content:space-around;">
          <div class="shadow p-3 mb-5 bg-light rounded mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
              <h1 style="font-size:20px;font-weight:900">Ms. R. Ramya </h1><hr class="bg-light">
