--- a/templates/intcommittee.html
+++ b/templates/intcommittee.html
@@ -13,7 +13,7 @@
   </div>
    {% include 'navbar.html' %}
 
-  <div class="bg-dark" style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;">
+  <div  style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;">
     <div><h1 style="font-weight:900;" class="text-white">INTERNATIONAL ADVISORY | <span class="text-danger">COMMITTEE</span> </h1></div>
 
   </div>
